Container on tablet fixed

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,11 +1,14 @@
 .container {
-  max-width: 1080px;
   padding: 25px 20px 0;
   margin: 0 auto;
 
   @include onTablet {
-    max-width: 1100px;
+    max-width: 680px;
     padding: 50px 40px 0;
+  }
+
+  @include onDesktop {
+    max-width: 1100px;
   }
 
   &--menu {
