--- a/src/styles/blocks/on-view.scss
+++ b/src/styles/blocks/on-view.scss
@@ -23,6 +23,7 @@
     display: flex;
     margin-bottom: 24px;
     gap: 20px;
+    max-height: 320px;
 
     &--count--3 {
       gap: 8px;
@@ -47,7 +48,7 @@
     }
 
     @include onTablet {
-      flex: 0 1 66.67%;
+      flex: 0 1 672px;
 
       #{$root}__image {
         object-position: center;
@@ -59,7 +60,7 @@
     flex: 0 1 50%;
 
     @include onTablet {
-      flex: 0 1 33.33%;
+      flex: 0 1 324px;
     }
   }
 
